<resources>
    <string name="app_name">SerabutInn</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="Username">Username</string>
    <string name="location">Location</string>
    <string name="phone">Phone Number</string>
    <string name="input_password">Enter your password</string>
    <string name="input_email">Enter your email address</string>
    <string name="input_name">Enter your full name</string>
    <string name="input_username">Enter your username</string>
    <string name="input_location">Enter your location</string>
    <string name="input_phone">Enter your phone number</string>
    <string name="RememberPassword">Remember Password</string>
    <string name="makeyourjob">Make Your Work Real!</string>
    <string name="takeyourjob">Get The Jobs Real!</string>
    <string name="recentjobs">Recent Jobs</string>
    <string name="pendingjobs">All Available Jobs</string>
    <string name="inprogressjobs">Jobs In Progress</string>
    <string name="makeyoursubjob">Making, cleaning, or helping with daily chores.</string>
    <string name="takeyoursubjobs">Taking tasks off your hands, simplifying your day-to-day life.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_notifications">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="profile">Profile</string>
    <string name="start_your_journey">Start Your\nJourney</string>
    <string name="front_page_welcome">Whether you\'re a customer or a partner,\n your next great opportunity is just a few\n clicks away. Let\'s get started!</string>
    <string name="login_here">Welcome</string>
    <string name="welcome_back">Welcome back you\'ve been missed!\nPlease login to continue</string>
    <string name="don_t_have_account">Don\'t Have account?</string>
    <string name="create_an_account">Create an Account!</string>
    <string name="fill_your_information_below_nor_else">Fill in all required fields to complete your registration.</string>
    <string name="pick_a_role">Pick a Role</string>
    <string name="back">Back</string>
    <string name="promojobs">Don’t Miss Out on These Exciting Opportunities!</string>
    <string name="detailjobs">Detail Jobs</string>
    <string name="ratingjobs">Add Rating</string>
    <string name="addratingjobs">Add Rating Jobs</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_main_customer">MainCustomerActivity</string>
    <string name="add_jobs">add Jobs</string>
    <string name="edit_jobs">Update Jobs</string>
    <string name="add_new_jobs">Add New Jobs</string>
    <string name="ayo_buat_pekerjaan">Create Your Jobs</string>
    <string name="edit_buat_pekerjaan">Edit Your Jobs</string>
    <string name="editbio">Edit Biodata</string>
    <string name="deadline">Deadline</string>
    <string name="pilih_tanggal">Choice Date</string>
    <string name="harga">Cost</string>
    <string name="foto">Foto</string>
    <string name="judul_pekerjaan">Jobs Title</string>
    <string name="input_jobstitle">Input your Title Jobs</string>
    <string name="input_jobscost">Input your Cost Jobs</string>
    <string name="input_jobsloc">Input your Location Jobs</string>
    <string name="deskripsi_pekerjaan">Description Jobs</string>
    <string name="Rp_20000">Masukkan angka</string>
    <string name="kamera">Camera</string>
    <string name="galeri">Galery</string>
    <string name="create_jobs">Create Jobs</string>
    <string name="get_jobs">Get Jobs</string>
    <string name="alamat">Location</string>
    <string name="daftar_kerja">Take A Jobs</string>
    <string name="deskripsi">Deskripsi :</string>
    <string name="lokasi">Lokasi :</string>
    <string name="biaya">Biaya :</string>
    <string name="deadlines">Deadline :</string>
    <string name="title_activity_update_bio">updateBioActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="update_your_information">Update Your</string>
    <string name="confirm">Confirm</string>
    <string name="information">Information!</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="profile_picture_url">https://storage.googleapis.com/serabutinn-bucket/imageApps/imageapps.png</string>
    <string name="serabutinn">Serabutinn</string>
</resources>